--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,91 +1,497 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
+$fa-font-path: "../bower_components/font-awesome/fonts/";
 // bower:scss
-@import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
+@import 'bootstrap-sass-official/assets/stylesheets/_bootstrap.scss';
+@import 'font-awesome/scss/font-awesome.scss';
 // endbower
 
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
-}
 
+html, body, .main-view, .section, .container-fluid, .first {
+  height: 100%;
+  width: 100%;
+}
 body {
-  padding: 0;
+  background-image: url(../images/index.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment:fixed;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
-
-  /* Make the masthead heading the same height as the navigation */
-  h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
+.navbar {
+  &.navbar-inverse {
+    background: rgba(0,0,0,0.5);
+    border: none;
+    border-radius: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    font-size: 12px;
+  }
+  .nav {
+    float: right;
+    font-size: 15px;
+  }
+  .container, .container-fluid {
+    .navbar-brand {
+      margin-left: -15px;
+      color: white;
+      font-family: 'Vollkorn', serif;
+    }
   }
 }
 
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
+.second, .third, .fourth, .fifth {
+  .vertical-center-row {
+    .green-border-2px {
+      border: 2px solid seagreen;
+    }
+    .options {
+      font-size: 19px;
+      color: white;
+      font-family: 'Vollkorn', serif;
+    }
+    .hr {
+      width: 67px;
+      height: 1px;
+      color: seagreen;
+      border-top: 2px solid seagreen;
+    }
+    .button, .btn-our-works {
+      margin-top: 2.5em;
+      background-color: seagreen;
+      color: white;
+      padding: 6px 12px;
+      font-size: 14px;
+      font-weight: normal;
+      line-height: 1.428571429;
+      white-space: nowrap;
+      box-shadow: none;
+      border: 2px solid seagreen;
+      &:hover {
+        background: none;
+      }
+    }
+  }
 }
 
-.container-narrow > hr {
-  margin: 30px 0;
+.first {
+  .section {
+    display: table;
+    margin: auto;
+    .vertical-center-row {
+      display: table-cell;
+      vertical-align: middle;
+      float: none;
+      .content {
+        float: none;
+        margin: auto;
+        .first-responsive {
+          color: white;
+          font-size: 29px;
+          font-family: 'Vollkorn', serif;
+        }
+        .bootstrap-is {
+          color: seagreen;
+          font-size: 20px;
+          font-family: 'Arimo', sans-serif;;
+        }
+        .share {
+          color: white;
+          font-size: 19px;
+          text-align: center;
+          font-family: 'Arimo', sans-serif;
+        }
+        .soc-buttons {
+          a {
+            font-size: 20px;
+            color: white;
+            text-decoration: none;
+            .green-square {
+              display: inline-block;
+              width: 35px;
+              height: 35px;
+              margin: 0 5px;
+              border: 2px solid seagreen;
+              &:hover {
+                background: seagreen;
+              } 
+              i {
+                vertical-align: middle;
+              }
+              .fa-vk, .fa-facebook, .fa-twitter, .fa-google-plus {
+                font-size: small;
+              }
+            }
+          }
+        }
+      }
+    }
+    .green-border {
+      .button, .btn-our-works {
+        margin-top: 2.5em;
+        background-color: seagreen;
+        color: white;
+        padding: 6px 12px;
+        font-size: 14px;
+        font-weight: normal;
+        line-height: 1.428571429;
+        white-space: nowrap;
+        box-shadow: none;
+        border: 2px solid seagreen;
+        &:hover {
+          background: none;
+        }
+      }
+    }
+  }
 }
 
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
+.second {
+  .hr {
+    margin-top: -18px;
+  }
+  .container-fluid {
+    .layout div {
+      margin: 15px 0;
+      &:first-child {
+        font-size: 24px;
+        text-align: left;
+        h2 {
+          font-size: 24px;
+          text-align: left;
+        }
+        h3 {
+          text-align: left;
+          font-size: 16px;
+        }
+      }
+      div {
+        margin: 1px; 
+        padding: 10px; 
+        height: auto; 
+        background: rgba(0,0,0,0.5);
+        color: #f5e8d0;
+        overflow: auto;
+        border-radius: 8px;
+        cursor: pointer;
+        &:hover {
+          background: rgba(0, 0, 0, 0.3);
+        }
+      }
+      .fa-file-o, 
+      .fa-apple, 
+      .fa-html5, 
+      .fa-bullhorn, 
+      .fa-book, 
+      .fa-envelope, 
+      .fa-code, 
+      .fa-briefcase, 
+      .fa-gamepad {
+        color: seagreen;
+        font-size: 30px;
+        padding-left: 10px;
+      }
+    }
+  } 
+}
 
+.third {
+  .pricing-tables {
+    padding: 20px;
+    h1 {
+    font-size: 48px;
+    }
+    .hr {
+      margin-top: 12px;
+    }
+  }
+  .row {
+    margin-right: -15px;
+    margin-left: -15px;
+  }
+  .pricing-tables.attached {
+    .col-sm-4, .col-md-4, .col-sm-3, .col-md-3 {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+  .plan {
+    box-shadow: 0 2px 2px rgba(10, 10, 10, 0.06);
+    min-height: 100px;
+    background: rgba(0, 0, 0, 0.5);
+    margin: 30px 0;
+    padding-bottom: 25px;
+    padding-top: 25px;
+    text-align: center;
+    ul {
+      list-style-type: none;
+      padding: 20px;
+      margin-top: 2px;
+    }
+  }
   .btn {
-    font-size: 21px;
-    padding: 14px 24px;
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1.428571429;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    border-radius: 0;
+    color: white;
+    background: none;
+    box-shadow: none;
+    &.focus, &:focus, &:hover {
+      color: white;
+      background: seagreen;
+      outline: none;
+    }
+  }
+  .plan {
+   &:hover {
+    box-shadow: rgba(0, 0, 0, 0.5);
+    transform: scale(1.04);
+    z-index: 1;
+    border-bottom: 0 none;
+   } 
+  .price {
+    margin: 0 auto 30px auto;
+    width: 80%;
+      .inside {
+
+        .symbol {
+          color: white;
+          font-size: 24px;
+          position: relative;
+          top: -6px;
+          left: -7px;
+          h3 span {
+            font-size: 38px;
+            vertical-align: top;
+            position: relative;
+            margin: 6px 0 0 -7px;
+          }
+        }
+      }
+     .is-visible {
+        color: #fff;
+        font-size: 50px;   
+     }
+    .per {
+      color: grey;
+    }
+  }
+  .head {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    padding: 12px 16px;
+    background: rgba(0, 0, 0, 0.6);
+    color: seagreen;
+    border-radius: 0;
+      h2 {
+      color: seagreen;
+      }
+    }
+  }
+  .fa-usd {
+    font-size: 3.5rem;
+    position: relative;
+    color: white;
+    top: -0.6em;
+    padding-right: 0px;
+  }
+  h5 {
+    color: white;
+  }
+  .fa-print {
+    margin-right: 18px;
+  }
+  .fa-clock-o {
+    margin-right: 12px;
+  }
+  .fa-trash-o {
+   margin-right: 7px;
   }
 }
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
+.fourth {
+  .hr {
+    margin-top: 12px;
+  }
+  .container-fluid {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    .layout {
+      /* when hiding the picture */
+      .ng-hide-add  {
+        animation:0.5s lightSpeedOut ease; 
+      }
+      /* when showing the picture */
+      .ng-hide-remove {
+        animation:0.5s flipInX ease; 
+      }
+      /* ANIMATIONS (FROM ANIMATE.CSS) ======================== */
+      /* flip in */
+      @keyframes flipInX {
+        0% {
+          transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+          transition-timing-function: ease-in;
+          opacity: 0;
+        }
 
-  p + h4 {
-    margin-top: 28px;
+        40% {
+          transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+          transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+          transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+          transition-timing-function: ease-in;
+          transition-timing-function: ease-in;
+        }
+
+        60% {
+          transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+          transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+          transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+          opacity: 1;
+        }
+
+        80% {
+          transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+          transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+          transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+        }
+
+        100% {
+          transform: perspective(400px);
+          transform: perspective(400px);
+          transform: perspective(400px);
+        }
+      }
+
+      /* light speed out */
+      @keyframes lightSpeedOut {
+        0% {
+          opacity: 1;
+        }
+
+        100% {
+          transform: translate3d(100%, 0, 0) skewX(30deg);
+          transform: translate3d(100%, 0, 0) skewX(30deg);
+          opacity: 0;
+        }
+      }
+      @keyframes lightSpeedOut {
+        0% {
+          opacity: 1;
+        }
+
+        100% {
+          transform: translate3d(100%, 0, 0) skewX(30deg);
+          transform: translate3d(100%, 0, 0) skewX(30deg);
+          transform: translate3d(100%, 0, 0) skewX(30deg);
+          opacity: 0;
+        }
+      }
+      .categories {
+        .columns-image {
+          border-radius: 2;
+        }
+        .green-border-1px {
+          border: 1px solid seagreen; 
+        }
+        .img-columns{
+          border-radius: 8px;
+          padding: 5px;
+        }
+        .lorem {
+          text-align: center;
+          font-size: 18px;
+          padding-top: 10px;
+        }
+        div {
+          margin: 15px 0; 
+          padding: 10px; 
+          height: auto; 
+          background: rgba(0,0,0,0.5);
+          color: #f5e8d0;
+          overflow: auto;
+          border-radius: 8px;
+          cursor: pointer;
+          &:hover {
+            background: rgba(0, 0, 0, 0.3);
+          }
+        }
+      }
+    }
   }
 }
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
+.fifth {
+  .tables-attached {
+    hr {
+      margin-top: 12px;
+    }
+    .team {
+      box-shadow: 0 2px 2px rgba(10, 10, 10, 0.06);
+      min-height: 100px;
+      background: rgba(0,0,0,0.5);
+      border: 1px solid white;
+      border-radius: 12px 12px 0 0;
+      margin: 30px 0;
+      padding-bottom: 25px;
+      padding-top: 25px;
+      text-align: center;
+      overflow: hidden;
+      &:hover {
+        box-shadow: rgba(0, 0, 0, 0.5); 
+        transform: scale(1.06);
+        border: 1px solid white;
+        border-radius: 12px 12px 0 0;
+      }
+      .img-team {
+        padding: 0;
+        margin-top: -25px;
+        overflow: hidden;
+        position: relative;
+        height: 174px;
+        z-index: 0;
+      }
+      .team-content {
+        .twitter-team {
+          color: seagreen;
+          font-size: 40px;
+          border: 15px solid white;
+          background-color: white;
+          border-radius: 50%;
+          position:absolute;
+          top: 49%;
+          left: 57%;
+          margin: -50px 0 0 -51px;
+          &:hover {
+            cursor: pointer;
+          }
+        }
+        .team-text {
+          font-size: 20px;
+          color: #fff;
+          margin-top: 5px;
+        }
+        .tean-text-2 {
+          color: seagreen;
+          font-size: 13px;
+        }
+        .team-text-3 {
+          color: #fff;
+          font-size: 16px;
+        }
+      } 
+    }
   }
 }
+
