--- a/app/styles/common/login.scss
+++ b/app/styles/common/login.scss
@@ -1,4 +1,4 @@
-html, body {
+/*html, body {
   height: 100%;
 }
 body {
@@ -74,4 +74,4 @@ form {
 }
 .login-social-one:focus, .login-social-two:focus  {
   outline: none;  
-}
+}*/
