--- a/app/views/form.html
+++ b/app/views/form.html
@@ -1,39 +1,50 @@
-<body>
-	<form class="form-horizontal">
-  	<div class="row vertical-center-row text-center">
-			<h2 class="panel-heading">Login</h2>
-			<button class="login-social login-social-one"><i class="fa fa-google-plus"></i></button>
-			<button class="login-social login-social-two"><i class="fa fa-facebook"></i></button>
-			<br>
-			<br>
-		</div>
-			<div class="form-group row">
-				<label for="input1" class="col-sm-2 control-label">Email</label>
-					<div class="col-sm-10">
-						<input type="email" class="form-input" id="input1" placeholder="Email">
-					</div>
-				</div>
-			<div class="form-group row">
-				<label for="input1" class="col-sm-2 control-label">Password</label>
-					<div class="col-sm-10">
-						<input type="password" class="form-input" id="input1" placeholder="Password">
-					</div>
-				</div>
-<!-- 				<div class="form-group row">
-					<div class="col-sm-offset-2 col-sm-10">
-						<div class="checkbox">
-							<label>
-								<input type="checkbox"> Remember me
-							</label>
-						</div>
-					</div>
-				</div> -->
-			<div class="form-group row">
-				<div>
-					<div class="row vertical-center-row text-center">
-						<button type="submit" class="btn">Sign in</button>
-					</div>	
-				</div>
+<div class="container">    
+	<div id="loginbox" style="margin-top:150px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2"> 
+		<div class="panel-heading" style="background-color: rgba(0,0,0,0.5); color: white; border-top-right-radius: 5px; border-top-left-radius: 5px;">
+			<div class="panel-title">Log In</div>
+			<div style="float:right; font-size: 80%; position: relative; top:-17px">
+					<a href="#" style="color: white;">Forgot password?</a>
 			</div>
-		</form>
-	</body>
+		</div>                    
+			<div class="panel-info" style="background-color: #fff; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px;" >
+				<div style="padding-top:30px" class="panel-body" >
+					<div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+					<form id="loginform" class="form-horizontal" role="form">
+							<div style="margin-bottom: 25px" class="input-group">
+								<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+								<input id="login-username" type="text" class="form-control" name="username" value="" placeholder="username or email">                                        
+							</div>
+							<div style="margin-bottom: 25px" class="input-group">
+								<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+								<input id="login-password" type="password" class="form-control" name="password" placeholder="password">
+							</div>
+							<div class="input-group">
+								<div class="checkbox">
+									<label>
+										<input id="login-remember" type="checkbox" name="remember" value="1"> Remember me
+									</label>
+								</div>
+							</div>
+							<div style="margin-top:10px" class="form-group">
+								<div class="row vertical-center-row text-center">
+									<!-- Button -->
+									<div class="col-sm-12 controls">
+										<a id="btn-login" href="#" class="btn btn-success">Login  </a>
+									</div>
+								</div>
+							</div>
+<!-- 							<div class="form-group">
+								<div class="col-md-12 control">
+									<div style="border-top: 1px solid#888; padding-top:15px; font-size:85%" >
+									Don't have an account! 
+									<a href="#" onClick="$('#loginbox').hide(); $('#signupbox').show()">
+									Sign Up Here
+									</a>
+									</div>
+								</div>
+							</div>  -->   
+					</form>     
+				</div>                     
+			</div>  
+		</div>
+</div>
