--- a/app/views/form.html
+++ b/app/views/form.html
@@ -1,3 +1,9 @@
+<style type="text/css">
+/*	 input.ng-valid{
+	border: 1px solid green;
+	}*/
+</style>
+
 <div class="container">    
 	<div id="loginbox" style="margin-top:150px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2"> 
 		<div class="panel-heading" style="background-color: rgba(0,0,0,0.5); color: white; border-top-right-radius: 5px; border-top-left-radius: 5px;">
@@ -9,15 +15,18 @@
 			<div class="panel-info" style="background-color: #fff; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px;" >
 				<div style="padding-top:30px" class="panel-body" >
 					<div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
-					<form id="loginform" class="form-horizontal" role="form">
-							<div style="margin-bottom: 25px" class="input-group">
+					<form id="loginform" class="form-horizontal" role="form" name="userForm">
+							<div style="margin-bottom: 25px" class="input-group" ng-class="{ 'has-error' : userForm.login.$invalid && !userForm.login.$pristine }">
 								<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-								<input id="login-username" type="text" class="form-control" name="username" value="" placeholder="username or email">                                        
+								<input id="login-username" type="text" class="form-control" name="login" value="" placeholder="username or email" ng-model="user.login" required> 
+								                                       
 							</div>
-							<div style="margin-bottom: 25px" class="input-group">
+							<!-- <span ng-show="userForm.login.$invalid && !userForm.login.$pristine" class="help-block"></span> -->
+							<div style="margin-bottom: 25px" class="input-group" ng-class="{ 'has-error' : userForm.password.$invalid && !userForm.password.$pristine }" >
 								<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-								<input id="login-password" type="password" class="form-control" name="password" placeholder="password">
+								<input id="login-password" type="password" class="form-control" name="password" placeholder="password" ng-model="user.password" required>
 							</div>
+						<!-- 	<span ng-show="userForm.password.$invalid && !userForm.password.$pristine" class="help-block"></span> -->
 							<div class="input-group">
 								<div class="checkbox">
 									<label>
@@ -29,7 +38,8 @@
 								<div class="row vertical-center-row text-center">
 									<!-- Button -->
 									<div class="col-sm-12 controls">
-										<a id="btn-login" href="#" class="btn btn-success">Login  </a>
+										<button id="btn-login" class="btn btn-success" ng-disabled="userForm.$invalid" ng-click="login(user)">Login </button>
+										<p style="color: red; font-size: 12px; padding-top: 14px;">{{msgTxt}}</p>
 									</div>
 								</div>
 							</div>
