--- a/app/views/form_registration.html
+++ b/app/views/form_registration.html
@@ -1,38 +1,48 @@
-<body>
-	<form class="form-horizontal">
-  	<div class="row vertical-center-row text-center">
-			<h2 class="panel-heading">Registration</h2>
-		</div>
-			<div class="form-group row">
-				<label for="input1" class="col-sm-2 control-label">Username</label>
-					<div class="col-sm-10">
-						<input type="username" class="form-input" id="input1" placeholder="Username">
-					</div>
-				</div>
-			<div class="form-group row">
-				<label for="input2" class="col-sm-2 control-label">Password</label>
-				<div class="col-sm-10">
-					<input type="password" class="form-input" id="input2" placeholder="Password">
-				</div>
-			</div>
-			<div class="form-group row">
-				<label for="input1" class="col-sm-2 control-label">Password</label>
-				<div class="col-sm-10">
-					<input type="password" class="form-input" id="input3" placeholder="Confirm Password">
-				</div>
-			</div>
-			<div class="form-group row">
-				<label for="input1" class="col-sm-2 control-label">Email</label>
-				<div class="col-sm-10">
-					<input type="email" class="form-input" id="input4" placeholder="Email">
-				</div>
-			</div>
-			<div class="form-group row">
-				<div>
-					<div class="row vertical-center-row text-center">
-						<button type="submit" class="btn">Registration</button>
-					</div>	
-				</div>
-			</div>
-		</form>
-	</body>
+<style>
+	.help-block {
+		display: block; 
+		color:#a94442; 
+		padding: 0 45px
+	}
+</style>
+<div class="container">
+	<div id="loginbox" style="margin-top:150px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2"> 
+		<div class="panel-heading" style="background-color: rgba(0,0,0,0.5); color: white; border-top-right-radius: 5px; border-top-left-radius: 5px;">
+			<div class="panel-title">Registration</div>
+		</div>       
+		<div class="panel-info" style="background-color: #fff; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px;" >
+			<div style="padding-top:30px" class="panel-body" >
+				<div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+					<form id="loginform" class="form-horizontal" role="form" name="userForm" ng-submit="submitForm(userForm.$valid)" novalidates>
+							<div style="margin-bottom: 25px" class="input-group" ng-class="{ 'has-error' : userForm.email.$invalid && !userForm.email.$pristine }" >
+								<span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+								<input id="login-email" type="email" class="form-control" name="email" value="" placeholder="Email" ng-model="user.email" required>	
+
+							</div>
+							<p ng-show="userForm.email.$invalid && !userForm.email.$pristine" class="help-block">Enter a valid email.</p>
+							<div style="margin-bottom: 25px" class="input-group" ng-class="{ 'has-error' : userForm.username.$invalid && !userForm.username.$pristine }">
+								<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+								<input id="login-username" type="text" class="form-control" name="username" value="" placeholder="Username" ng-model="user.username" ng-minlength="3" required>						                                       
+							</div>
+							   <p ng-show="userForm.username.$error.minlength" class="help-block">Username is too short.</p>
+
+							<!-- <span ng-show="userForm.login.$invalid && !userForm.login.$pristine" class="help-block"></span> -->
+							<div style="margin-bottom: 25px" class="input-group">
+								<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span> 
+								<input id="login-password" type="password" class="form-control" name="password" placeholder="password" ng-model="user.password" required>
+							</div>
+						<!-- 	<span ng-show="userForm.password.$invalid && !userForm.password.$pristine" class="help-block"></span> -->
+							<div class="input-group">
+							</div>
+							<div style="margin-top:10px" class="form-group">
+								<div class="row vertical-center-row text-center">
+									<div class="col-sm-12 controls">
+										<button type="submit" id="btn-login" class="btn btn-success" ng-disabled="userForm.$invalid" ng-submit="submitForm(userForm.$valid)" ng-click="submitForm()">Creat account </button>
+									</div>
+								</div>
+							</div> 
+					</form>     
+				</div>                     
+			</div>  
+	</div>
+</div>
