--- a/app/views/form.html
+++ b/app/views/form.html
@@ -1,8 +1,3 @@
-<style type="text/css">
-/*	 input.ng-valid{
-	border: 1px solid green;
-	}*/
-</style>
 
 <div class="container">    
 	<div id="loginbox" style="margin-top:150px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2"> 
@@ -16,43 +11,33 @@
 				<div style="padding-top:30px" class="panel-body" >
 					<div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
 					<form id="loginform" class="form-horizontal" role="form" name="userForm">
-							<div style="margin-bottom: 25px" class="input-group" ng-class="{ 'has-error' : userForm.login.$invalid && !userForm.login.$pristine }">
+							<div style="margin-bottom: 15px" class="input-group" ng-class="{ 'has-error' : userForm.login.$invalid && !userForm.login.$pristine}">
 								<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
 								<input id="login-username" type="text" class="form-control" name="login" value="" placeholder="username or email" ng-model="user.login" required> 
-								                                       
+				                                    
 							</div>
 							<!-- <span ng-show="userForm.login.$invalid && !userForm.login.$pristine" class="help-block"></span> -->
-							<div style="margin-bottom: 25px" class="input-group" ng-class="{ 'has-error' : userForm.password.$invalid && !userForm.password.$pristine }" >
+							<div style="margin-bottom: 15px" class="input-group" ng-class="{ 'has-error' : userForm.password.$invalid && !userForm.password.$pristine }" >
 								<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
 								<input id="login-password" type="password" class="form-control" name="password" placeholder="password" ng-model="user.password" required>
 							</div>
 						<!-- 	<span ng-show="userForm.password.$invalid && !userForm.password.$pristine" class="help-block"></span> -->
 							<div class="input-group">
 								<div class="checkbox">
-									<label>
+									<label style="margin-bottom: 15px">
 										<input id="login-remember" type="checkbox" name="remember" value="1"> Remember me
 									</label>
 								</div>
 							</div>
-							<div style="margin-top:10px" class="form-group">
+							<div class="form-group">
 								<div class="row vertical-center-row text-center">
 									<!-- Button -->
 									<div class="col-sm-12 controls">
-										<button id="btn-login" class="btn btn-success" ng-disabled="userForm.$invalid" ng-click="login(user)">Login </button>
-										<p style="color: red; font-size: 12px; padding-top: 14px;">{{msgTxt}}</p>
-									</div>
+										<button id="btn-login" class="btn btn-success" ng-disabled="userForm.$invalid" ng-click="login()">Login </button>
+										<p style="color: #a94442; font-size: 12px; padding-top: 14px;">{{validationMessage}}</p>
+										</div>
 								</div>
-							</div>
-<!-- 							<div class="form-group">
-								<div class="col-md-12 control">
-									<div style="border-top: 1px solid#888; padding-top:15px; font-size:85%" >
-									Don't have an account! 
-									<a href="#" onClick="$('#loginbox').hide(); $('#signupbox').show()">
-									Sign Up Here
-									</a>
-									</div>
-								</div>
-							</div>  -->   
+							</div>  
 					</form>     
 				</div>                     
 			</div>  
