--- a/app/views/form_registration.html
+++ b/app/views/form_registration.html
@@ -1,7 +1,7 @@
 <style>
 	.help-block {
 		display: block; 
-		color:#a94442; 
+		color: #a94442; 
 		padding: 0 45px
 	}
 </style>
@@ -13,31 +13,43 @@
 		<div class="panel-info" style="background-color: #fff; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px;" >
 			<div style="padding-top:30px" class="panel-body" >
 				<div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
-					<form id="loginform" class="form-horizontal" role="form" name="userForm" ng-submit="submitForm(userForm.$valid)" novalidates>
-							<div style="margin-bottom: 25px" class="input-group" ng-class="{ 'has-error' : userForm.email.$invalid && !userForm.email.$pristine }" >
-								<span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-								<input id="login-email" type="email" class="form-control" name="email" value="" placeholder="Email" ng-model="user.email" required>	
+					<form id="loginform" class="form-horizontal" role="form" name="userForm" ng-submit="submitForm()" novalidates>
+							
 
-							</div>
-							<p ng-show="userForm.email.$invalid && !userForm.email.$pristine" class="help-block">Enter a valid email.</p>
-							<div style="margin-bottom: 25px" class="input-group" ng-class="{ 'has-error' : userForm.username.$invalid && !userForm.username.$pristine }">
+							<div style="margin-bottom: 15px" class="input-group" ng-class="{ 'has-error' : userForm.username.$invalid && !userForm.username.$pristine }">
 								<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-								<input id="login-username" type="text" class="form-control" name="username" value="" placeholder="Username" ng-model="user.username" ng-minlength="3" required>						                                       
+								<input id="login-username" type="text" class="form-control" name="username" value="" placeholder="Username" ng-model="user.username" ng-minlength="4" required>						                                       
 							</div>
 							   <p ng-show="userForm.username.$error.minlength" class="help-block">Username is too short.</p>
+							   <p ng-show="userForm.username.$invalid" class="help-block">{{validationMessages.username}}</p>
 
-							<!-- <span ng-show="userForm.login.$invalid && !userForm.login.$pristine" class="help-block"></span> -->
-							<div style="margin-bottom: 25px" class="input-group">
+							<div style="margin-bottom: 15px" class="input-group" ng-class="{ 'has-error' : userForm.password.$invalid && !userForm.password.$pristine }">
 								<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span> 
 								<input id="login-password" type="password" class="form-control" name="password" placeholder="password" ng-model="user.password" required>
 							</div>
-						<!-- 	<span ng-show="userForm.password.$invalid && !userForm.password.$pristine" class="help-block"></span> -->
+
+							<div style="margin-bottom: 15px" class="input-group" ng-class="{ 'has-error' : userForm.email.$invalid && !userForm.email.$pristine }" >
+								<span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+								<input id="login-email" type="email" class="form-control" name="email" value="" placeholder="Email" ng-model="user.email" required>	
+							</div>
+							<p ng-show="userForm.email.$invalid && !userForm.email.$pristine" class="help-block">Enter a valid email.</p>
+							<p ng-show="userForm.email.$invalid" class="help-block">{{validationMessages.email}}</p>
+
+
+							<div style="margin-bottom: 15px" class="input-group" ng-class="{ 'has-error' : userForm.phone.$invalid && !userForm.phone.$pristine }" >
+								<span class="input-group-addon"><i class="glyphicon glyphicon-phone"></i></span>
+								<input id="login-phone" type="text" class="form-control" name="phone" ng-minlength="13" ng-maxlength="13" placeholder="Phone number" ng-model="user.phone" ng-pattern="/^[\+]?[(]?[0-9]{3}[)]?[-\s\.]?[0-9]{3}[-\s\.]?[0-9]{4,6}$/" required>	
+							</div>
+            		<p ng-show="((userForm.phone.$error.minlength || userForm.phone.$error.maxlength) && userForm.phone.$dirty)" class="help-block" >Phone number should be 13 digits</p>
+            		<p ng-show="userForm.phone.$error.pattern" class="help-block">Please enter a valid phone number</p>
+            		<p ng-show="userForm.phone.$invalid" class="help-block">{{validationMessages.phone}}</p>
+						
 							<div class="input-group">
 							</div>
 							<div style="margin-top:10px" class="form-group">
 								<div class="row vertical-center-row text-center">
 									<div class="col-sm-12 controls">
-										<button type="submit" id="btn-login" class="btn btn-success" ng-disabled="userForm.$invalid" ng-submit="submitForm(userForm.$valid)" ng-click="submitForm()">Creat account </button>
+										<button type="submit" id="btn-login" class="btn btn-success" ng-disabled="userForm.$invalid">Creat account </button>
 									</div>
 								</div>
 							</div> 
