Add no correct answer button

--- a/app/views/question.html
+++ b/app/views/question.html
@@ -12,6 +12,6 @@
   </div>
 	<div class="col-xs-12">
 		<br>
-		<button class="btn btn-success btn-lg col-xs-12" ng-click='answering("yes")'>No correct answers</button>
+		<button class="btn btn-success btn-lg col-xs-12" ng-click='answering(noCorrectAnswer)'>No correct answers</button>
 	</div>
   
